--- a/src/shared/components/forms/sweetmix-input/sweetmix-input.component.html
+++ b/src/shared/components/forms/sweetmix-input/sweetmix-input.component.html
@@ -5,6 +5,7 @@
     name="input"
     placeholder=" "
     swInput
+    [disabled]="disabled"
     [hasError]="hasError"
     [value]="value"
     (input)="onInputChange($event)"
