--- a/src/app/pages/app.component.html
+++ b/src/app/pages/app.component.html
@@ -1,2 +1,22 @@
 <app-painel-aviso />
-<router-outlet />
+<nav class="fixed top-0 z-10 w-full bg-white border-b border-gray-200">
+    <div class="px-4 mx-auto max-w-7xl sm:px-6 lg:px-8">
+        <div class="flex items-center justify-between h-16">
+            <div class="flex items-center">
+                <div class="flex-shrink-0">
+                    <img class="h-8 w-8" src="https://placehold.co/32x32" alt="Logo">
+                </div>
+                <div class="block">
+                    <div class="ml-10 flex items-baseline space-x-4">
+                        <a routerLink="/cadastro" class="text-gray-900 hover:bg-gray-50 hover:text-gray-900 px-3 py-2 rounded-md text-sm font-medium">Cadastro</a>
+                        <a routerLink="/listagem" class="text-gray-900 hover:bg-gray-50 hover:text-gray-900 px-3 py-2 rounded-md text-sm font-medium">Listagem</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</nav>
+
+<div class="mx-auto max-w-7xl mt-24 px-10">
+    <router-outlet />
+</div>
