--- a/src/formula/components/formulario/formulario.component.html
+++ b/src/formula/components/formulario/formulario.component.html
@@ -5,8 +5,9 @@
   <div 
     formArrayName="ingredientes" 
     class="col-span-10 p-4 rounded-md outline-1 outline-gray-300 mt-10"
+    [class.outline-red-500]="ingredientesInvalidos"
   >
-    <h2 class="text-xl mb-5">Ingredientes</h2>
+    <h2 class="text-xl mb-5" [class.text-red-600]="ingredientesInvalidos">Ingredientes</h2>
 
     @for (ingrediente of ingredientes.controls; let i = $index; track ingrediente) {
       <div [formGroupName]="i" class="grid grid-cols-10 gap-4 my-2">
@@ -30,4 +31,3 @@
     }
   </div>
 </form>
-
