--- a/src/formula/pages/cadastro/cadastro.component.html
+++ b/src/formula/pages/cadastro/cadastro.component.html
@@ -1,6 +1,6 @@
 <h1 class="text-3xl mb-5">Cadastro de fórmula</h1>
 
-<for-formulario-cadastro
+<for-formulario
   [formula]="formulaSelecionada$ | async"
   (salvarAcionado)="salvar($event)"
   (voltarAcionado)="voltar()"
