--- a/src/formula/components/tabela-formulas/tabela-formulas.component.html
+++ b/src/formula/components/tabela-formulas/tabela-formulas.component.html
@@ -9,23 +9,22 @@
       </tr>
     </thead>
     <tbody>
-      @for (formula of formulas() | filtrarPorTermo: filtro(); track formula.id) {
+      @for (formula of formulas() | filtrarPorTermo: filtro(): ['nome', 'codigo']; track formula.id) {
           <tr>
           <td class="border border-gray-300 px-4 py-2">{{ formula.codigo }}</td>
           <td class="border border-gray-300 px-4 py-2">{{ formula.nome }}</td>
           <td class="border border-gray-300 px-4 py-2 text-center">
               {{ formula.ingredientes.length }}
           </td>
-          <td class="border border-gray-300 px-4 py-2 text-center">
-              <button (click)="editarAcionado.emit(formula)" class="text-blue-500 hover:underline">
-              Editar
+          <td class="border border-gray-300 px-4 py-2">
+            <div class="flex justify-around">
+              <button (click)="editarAcionado.emit(formula)" class="text-blue-500 hover:text-blue-700" alt="Editar">
+                <sw-icon-edit/>
               </button>
-              <button
-              (click)="excluirAcionado.emit(formula)"
-              class="text-red-500 hover:underline ml-2"
-              >
-              Excluir
+              <button (click)="excluirAcionado.emit(formula)" class="text-red-500 hover:text-red-700 ml-5">
+                <sw-icon-delete/>
               </button>
+            </div>
           </td>
           </tr>
       }
