wip: adiciona comparador

--- a/src/app/pages/app.component.html
+++ b/src/app/pages/app.component.html
@@ -10,6 +10,7 @@
                     <div class="ml-10 flex items-baseline space-x-4">
                         <a routerLink="/listagem" routerLinkActive="text-blue-600" class="hover:text-blue-600 px-3 py-2 text-sm font-medium">Listagem</a>
                         <a routerLink="/cadastro" routerLinkActive="text-blue-600" class="hover:text-blue-600 px-3 py-2 text-sm font-medium">Cadastro</a>
+                        <a routerLink="/comparador" routerLinkActive="text-blue-600" class="hover:text-blue-600 px-3 py-2 text-sm font-medium">Comparador</a>
                     </div>
                 </div>
             </div>
