--- a/src/formula/components/formulario/formulario.component.html
+++ b/src/formula/components/formulario/formulario.component.html
@@ -11,8 +11,8 @@
 
     @for (ingrediente of ingredientes.controls; let i = $index; track ingrediente) {
       <div [formGroupName]="i" class="grid grid-cols-10 gap-4 my-2">
-        <sw-input swAutoFocus class="col-span-2" label="Código" formControlName="codigo" name="codigo" errorMessage="Campo obrigatório." />
-        <sw-input class="col-span-7" [class.col-span-8]="ingredientes.controls.length === 1" label="Nome" formControlName="nome" name="nome" (keydown.enter)="adicionarIngrediente()" />
+        <sw-input swAutoFocus class="col-span-2" label="Código" formControlName="codigo" errorMessage="Campo obrigatório." />
+        <sw-input class="col-span-7" [class.col-span-8]="ingredientes.controls.length === 1" label="Nome" formControlName="nome" (keydown.enter)="adicionarIngrediente()" />
 
         @if (ingredientes.controls.length > 1) {
           <button swButton color="red" class="col-span-1" type="button" tabindex="-1" (click)="removerIngrediente(i)">Remover</button>
