--- a/src/app/pages/app.component.html
+++ b/src/app/pages/app.component.html
@@ -18,6 +18,6 @@
     </div>
 </nav>
 
-<div class="mx-auto max-w-7xl mt-10 px-10">
+<div class="mx-auto max-w-7xl p-10">
     <router-outlet />
 </div>
